# zcf-src-jn5189-ed

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeToolchain.cmake  Dockerfile  README.md
.devcontainer/: devcontainer.json
.devcontainer/scripts/: download_toolchain.sh  install-vscode-extensions.sh
firmwares/: CMakeLists.txt  main.c
firmwares/WXKG15LM/: README.md  app.zpscfg  buttons_defintions.h  device_config.c  device_definitions.h
firmwares/WXKG15LM/board/: board.c  board.h  board_utility.c  board_utility.h  clock_config.c  clock_config.h  pin_mux.c  pin_mux.h
firmwares/common/include/: app_buttons.h  app_buttons_actions.h  app_events.h  app_leds.h  app_main.h  app_pwr.h  app_resources.h  app_wwdt.h  bdb_options.h  board_utility.h  device_config.h  pin_mux.h
firmwares/common/src/: app_buttons.c  app_leds.c  app_main.c  app_pwr.c  app_resources.c  app_wwdt.c  board_utility.c  hardware_init.c  main.c
src/: CMakeLists.txt  app.zpscfg  main.c
toolchain/: CMakeToolchain.cmake
tools/: PDUMConfig.py  ZPSConfig.py
